--- a/sistemaAgendamento/src/main/resources/application.properties
+++ b/sistemaAgendamento/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/atendimentoHospitalar
+spring.datasource.username=postgres
+spring.datasource.password=Ferreira123
+server.port=8180
+spring.jpa.hibernate.ddl-auto=create
+server.servlet.encoding.charset=latin1
